Versuch 13 und Beginn der Implementierung für den Error Calc

--- a/example_data/output.tex
+++ b/example_data/output.tex
@@ -198,6 +198,6 @@ Messwerte & Absolute Abweichung & Relative Abweichung (%) \\
 \end{table}
 
 Arithmetischer Mittelwert: 99.780 \\
-Standardabweichung \sigma : ±9.838 \\
+Standardabweichung \sigma : ï¿½9.838 \\
 Statistischer Fehler: \plusminus0.719 \\
 Anzahl Messwerte: 187 
