wilde Export einstellungen

--- a/example_data/output.sty
+++ b/example_data/output.sty
@@ -1,4 +1,4 @@
-% ----- Diese Datei enth\ält die Versuchswerte, die durch das FEZ PAP ErrorCalculator tool berehcnet wurden und automatisiert ertsellt wird. -----
+% ----- Diese Datei enthält die Versuchswerte, die durch das FEZ PAP ErrorCalculator tool berehcnet wurden und automatisiert ertsellt wird. -----
 % --- Hier stehen die Messwerte und deren Unsicherheiten für den jeweiigligen Versuch tabellarisch drin. ---
 % Variable der Tabelle der Messwerte
 % Tabelle der Messwerte 
